--- a/src/components/Apartament/Apartament.scss
+++ b/src/components/Apartament/Apartament.scss
@@ -24,15 +24,22 @@
       align-items: center;
     }
   }
+
   &__slider {
     width: 50%;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    overflow: hidden;
     @include media(992) {
       width: 100%;
-      gap: 14px;
+    }
+
+    &-wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+      overflow: hidden;
+      @include media(992) {
+        width: 100%;
+        gap: 14px;
+      }
     }
     &-top {
       width: 100%;
@@ -90,7 +97,20 @@
         }
       }
     }
+
+    &-error {
+      width: 100%;
+      border-radius: 40px;
+      overflow: hidden;
+      & img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        object-fit: cover;
+      }
+    }
   }
+
   &__user {
     border-radius: 16px;
     background: #fdfdfd;
@@ -202,6 +222,7 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+
         @include media(992) {
           gap: 10px;
         }
@@ -209,6 +230,7 @@
           display: flex;
           align-items: center;
           gap: 5px;
+
           &-title {
             color: #08a1c1;
             font-size: clamp(0.75rem, 0.725rem + 0.13vw, 0.875rem);
