--- a/src/components/Apartament/Apartament.scss
+++ b/src/components/Apartament/Apartament.scss
@@ -14,6 +14,10 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+
+    @include media(1200) {
+      gap: 30px;
+    }
     @include media(992) {
       flex-direction: column;
       padding: 16px 16px 40px;
