--- a/src/assets/scss/UI/OrderModal.scss
+++ b/src/assets/scss/UI/OrderModal.scss
@@ -118,6 +118,9 @@
     &_label {
       font-size: 14px;
       font-weight: 500;
+      @include media(576) {
+        font-size: 16px;
+      }
     }
 
     &_input {
