--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -71,7 +71,7 @@
         box-shadow: none;
         border-radius: 0;
         padding: 5px;
-        font-size: 12px;
+        font-size: 18px;
         font-weight: 400;
         background: none;
         color: #5C5C5C;
@@ -122,7 +122,7 @@
         box-shadow: 0px 0px 8px 0px #072C3326;
         color: #08A1C1;
         transition: 0.3s linear;
-        font-size: 12px;
+        font-size: 16px;
         font-weight: 400;
         padding: 16px;
       }
@@ -193,10 +193,43 @@
       }
     }
 
+    &-commersial-top {
+      display: grid;
+      gap: 24px;
+      grid-template-columns: repeat(2, 1fr);
+
+      @include media(576) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+    }
+
     &-newbuilding-bottom {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 24px 15px;
+    }
+
+    &-commersial-bottom {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 24px 15px;
+
+      & .filter__form-block {
+        grid-column: 2 span;
+
+        @include media(576) {
+          grid-template-columns: repeat(1, 1fr);
+        }
+      }
+
+    }
+
+    &-commersial-mob {
+      grid-column: 2 span;
+
+      @include media(576) {
+        grid-column: 1 span;
+      }
     }
 
     &-house-top {
@@ -206,6 +239,12 @@
 
       @include media(576) {
         grid-template-columns: repeat(1, 1fr);
+      }
+
+      & .filter__form-block {
+        @include media(576) {
+          grid-column: 1 span;
+        }
       }
     }
 
