--- a/src/components/Career/Career.scss
+++ b/src/components/Career/Career.scss
@@ -1,6 +1,6 @@
 .career {
   &__banner {
-    background-image: url("@/assets/images/mortgage_banner-test.webp");
+    background-color: #08a1c1;
     height: 650px;
     background-repeat: no-repeat;
     background-position: center;
