--- a/src/assets/scss/UI/UI.scss
+++ b/src/assets/scss/UI/UI.scss
@@ -144,6 +144,7 @@
   overflow: hidden;
   box-shadow: 0px 4px 16px 0px rgba(30, 30, 30, 0.15);
   width: 100%;
+  background: #fff;
   &__wrapper {
     display: block;
     width: 100%;
