--- a/src/components/Apartament/Apartament.scss
+++ b/src/components/Apartament/Apartament.scss
@@ -1,15 +1,18 @@
 @import "@/assets/scss/mixin.scss";
+
 .apartament {
   padding-top: 100px;
   margin-bottom: 150px;
   display: flex;
   flex-direction: column;
   gap: 100px;
+
   @include media(992) {
     padding-top: 20px;
     margin-bottom: 100px;
     gap: 40px;
   }
+
   &__wrapper {
     display: flex;
     align-items: flex-start;
@@ -18,6 +21,7 @@
     @include media(1200) {
       gap: 30px;
     }
+
     @include media(992) {
       flex-direction: column;
       padding: 16px 16px 40px;
@@ -31,6 +35,7 @@
 
   &__slider {
     width: 50%;
+
     @include media(992) {
       width: 100%;
     }
@@ -40,14 +45,17 @@
       flex-direction: column;
       gap: 40px;
       overflow: hidden;
+
       @include media(992) {
         width: 100%;
         gap: 14px;
       }
     }
+
     &-top {
       width: 100%;
       height: 524px;
+
       @include media(992) {
         height: 450px;
         height: auto;
@@ -58,12 +66,15 @@
         height: 100%;
         border-radius: 40px;
         overflow: hidden;
+
         @include media(992) {
           border-radius: 16px;
         }
+
         &-img {
           width: 100%;
           height: 100%;
+
           & img {
             width: 100%;
             height: 100%;
@@ -77,21 +88,26 @@
     &-bottom {
       width: 100%;
       height: 97px;
+
       @include media(992) {
         height: 65px;
       }
+
       &-slide {
         width: 97px;
         height: 100%;
         border-radius: 20px;
         overflow: hidden;
+
         @include media(992) {
           border-radius: 8px;
           width: 65px;
         }
+
         &-img {
           width: 100%;
           height: 100%;
+
           & img {
             width: 100%;
             height: 100%;
@@ -106,6 +122,7 @@
       width: 100%;
       border-radius: 40px;
       overflow: hidden;
+
       & img {
         width: 100%;
         height: 100%;
@@ -122,6 +139,7 @@
     padding: 50px;
     max-width: 545px;
     width: 100%;
+
     @include media(992) {
       box-shadow: none;
       padding: 0;
@@ -129,20 +147,25 @@
       background: none;
       max-width: 100%;
     }
+
     &-content {
       display: flex;
       flex-direction: column;
       gap: 40px;
+
       @include media(992) {
         gap: 20px;
       }
+
       &-caption {
         display: flex;
         flex-direction: column;
         gap: 15px;
+
         @include media(992) {
           gap: 5px;
         }
+
         &-title {
           color: #343434;
           font-size: clamp(1.125rem, 1.025rem + 0.5vw, 1.625rem);
@@ -164,18 +187,22 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+
         @include media(992) {
           gap: 20px;
         }
+
         &-avatar {
           display: flex;
           align-items: center;
           gap: 15px;
+
           &-img {
             width: 70px;
             height: 70px;
             border-radius: 50%;
             overflow: hidden;
+
             & img {
               width: 100%;
               height: 100%;
@@ -192,13 +219,16 @@
             letter-spacing: 0.36px;
           }
         }
+
         &-btns {
           display: flex;
           flex-direction: column;
           gap: 15px;
+
           @include media(992) {
             gap: 10px;
           }
+
           &-number {
             text-align: center;
             display: inline-block;
@@ -212,6 +242,7 @@
             border: 1px solid #08a1c1;
             width: 100%;
           }
+
           &-call {
             color: #fff;
             font-size: clamp(0.75rem, 0.675rem + 0.38vw, 1.125rem);
@@ -233,6 +264,7 @@
         @include media(992) {
           gap: 10px;
         }
+
         &-block {
           display: flex;
           align-items: center;
@@ -257,18 +289,22 @@
       }
     }
   }
+
   &__caption {
     display: flex;
     flex-direction: column;
     gap: 40px;
+
     @include media(992) {
       gap: 20px;
     }
+
     &-title {
       color: #343434;
       font-size: clamp(1.5rem, 1.125rem + 1.88vw, 3.375rem);
       font-weight: 600;
       line-height: 125%;
+
       @include media(992) {
         text-align: center;
       }
@@ -280,9 +316,11 @@
       display: flex;
       flex-direction: column;
       gap: 24px;
+
       @include media(992) {
         gap: 50px;
       }
+
       & p {
         color: #343434;
         font-size: clamp(0.75rem, 0.725rem + 0.13vw, 0.875rem);
@@ -292,18 +330,22 @@
       }
     }
   }
+
   &__similar {
     display: flex;
     flex-direction: column;
     gap: 100px;
+
     @include media(992) {
       gap: 20px;
     }
+
     &-title {
       color: #343434;
       font-size: clamp(1.5rem, 1.125rem + 1.88vw, 3.375rem);
       font-weight: 600;
       line-height: normal;
+
       @include media(992) {
         text-align: center;
       }
@@ -313,9 +355,11 @@
       display: grid;
       grid-template-columns: repeat(3, minmax(290px, 1fr));
       gap: 15px;
+
       @include media(992) {
         grid-template-columns: repeat(2, minmax(290px, 1fr));
       }
+
       @include media(620) {
         grid-template-columns: repeat(1, minmax(290px, 1fr));
       }
@@ -327,10 +371,12 @@
     flex-direction: column;
     gap: 50px;
     margin-bottom: 200px;
+
     @include media(992) {
       gap: 30px;
       margin-bottom: 50px;
     }
+
     &-title {
       max-width: 750px;
       width: 100%;
@@ -338,6 +384,7 @@
       font-size: clamp(1.5rem, 1.125rem + 1.88vw, 3.375rem);
       font-weight: 600;
       line-height: normal;
+      margin-top: 30px;
     }
 
     &-wrapper {
@@ -347,17 +394,21 @@
       align-items: center;
       justify-content: center;
       gap: 100px;
+
       @include media(992) {
         gap: 40px;
       }
+
       &-inner {
         display: grid;
         grid-template-columns: repeat(3, minmax(290px, 1fr));
         gap: 15px;
         justify-content: space-between;
+
         @include media(992) {
           grid-template-columns: repeat(2, minmax(290px, 1fr));
         }
+
         @include media(620) {
           grid-template-columns: repeat(1, minmax(290px, 1fr));
         }
@@ -375,6 +426,7 @@
         align-items: center;
         gap: 15px;
         margin: 0 auto;
+
         &-item {
           border-radius: 8px;
           border: 1px solid #08a1c1;
@@ -395,11 +447,13 @@
 
           &.active {
             background: #08a1c1;
+
             & a {
               color: #fff;
             }
           }
         }
+
         &-prev {
           border-radius: 8px;
           border: 1px solid #08a1c1;
@@ -410,6 +464,7 @@
             justify-content: center;
             width: 30px;
             height: 30px;
+
             & svg {
               fill: #646464;
             }
@@ -418,6 +473,7 @@
           &.disabled {
             background: #c0c0c0;
             border: 1px solid #c0c0c0;
+
             & svg {
               fill: #fff;
             }
@@ -427,12 +483,14 @@
         &-next {
           border-radius: 8px;
           border: 1px solid #08a1c1;
+
           & a {
             display: flex;
             align-items: center;
             justify-content: center;
             width: 30px;
             height: 30px;
+
             & svg {
               fill: #646464;
             }
@@ -441,6 +499,7 @@
           &.disabled {
             background: #c0c0c0;
             border: 1px solid #c0c0c0;
+
             & svg {
               fill: #fff;
             }
