--- a/src/components/Apartament/Apartament.scss
+++ b/src/components/Apartament/Apartament.scss
@@ -419,6 +419,7 @@
         font-size: clamp(1.5rem, 1.125rem + 1.88vw, 3.375rem);
         font-weight: 600;
         line-height: normal;
+        margin-top: 40px;
       }
 
       &-pagination {
