--- a/src/components/Career/Career.scss
+++ b/src/components/Career/Career.scss
@@ -250,7 +250,7 @@
       font-weight: 600;
       line-height: 125%;
 
-      & span {
+      & span.brand {
         display: block;
         color: #08a1c1;
         font-size: clamp(1.125rem, 0.675rem + 2.25vw, 3.375rem);
