--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -170,12 +170,10 @@
   }
 
   &__advantages {
-    margin-bottom: 250px;
     display: flex;
     flex-direction: column;
     gap: 50px;
-    align-items: center;
-
+    margin-bottom: 250px;
     @include media(992) {
       margin-bottom: 100px;
     }
@@ -184,48 +182,53 @@
       font-size: clamp(1.5rem, 1.125rem + 1.88vw, 3.375rem);
       font-weight: 600;
       line-height: 125%;
-      @include media(768) {
-        text-align: center;
-      }
-
       & span {
         color: #08a1c1;
+      }
+
+      @include media (992) {
+        text-align: center;
       }
     }
 
     &-wrapper {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      display: flex;
+      flex-wrap: wrap;
       gap: 15px;
-      @include media(768) {
-        grid-template-columns: repeat(2, 1fr);
-      }
-
-      @include media(400) {
-        gap: 10px;
+      justify-content: center;
+      @include media(690) {
+        display: grid;
       }
       &-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex: 1 1 320px;
+        max-width: 433px;
+        min-width: 319px;
         padding: 50px;
         border-radius: 36px;
         background: #08a1c1;
         box-shadow: 0px 0px 8px 0px rgba(7, 44, 51, 0.15);
-        display: flex;
-        align-items: center;
-        justify-content: center;
 
-        @include media(768) {
-          padding: 20px 30px;
-          border-radius: 20px;
+        @include media(690) {
+          padding: 35px;
+          max-width: 100%;
+          min-width: 100%;
+          border-radius: 16px;
           &:nth-child(1) {
             grid-column: span 2;
-            padding: 15px;
           }
         }
 
-        @include media(600) {
+        @include media(480) {
+          padding: 20px;
+          &:nth-child(1) {
+            padding: 25px;
+          }
+        }
+        @include media(400) {
           padding: 5px 15px;
-          border-radius: 16px;
-
           &:nth-child(1) {
             padding: 10px;
           }
