--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -14,6 +14,16 @@
     justify-content: space-between;
     align-items: center;
 
+    &-logo {
+      width: 100px;
+      height: 30px;
+
+      &-img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
     @include media(790) {
       display: none;
     }
