--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -5,9 +5,11 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
     @include media(992) {
       height: 30vh;
     }
+
     &-wrapper {
       display: flex;
       align-items: center;
@@ -45,11 +47,13 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
+
     @include media(992) {
       padding-top: 50px;
       margin-bottom: 40px;
       align-items: center;
     }
+
     &-title {
       color: #343434;
       font-size: clamp(1.5rem, 1.125rem + 1.88vw, 3.375rem);
@@ -61,6 +65,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 15px;
+
       &-card {
         border-radius: 16px;
         background: #fdfdfd;
@@ -75,10 +80,12 @@
           flex-direction: column;
           gap: 10px;
         }
+
         &-img {
           width: 134px;
           height: 134px;
           display: flex;
+
           @include media(480) {
             width: 30px;
             height: 30px;
@@ -104,9 +111,11 @@
 
   &__offer {
     margin-bottom: 100px;
+
     @include media(992) {
       margin-bottom: 40px;
     }
+
     &-wrapper {
       display: flex;
       flex-direction: column;
@@ -133,8 +142,10 @@
       display: flex;
       flex-direction: column;
       gap: 50px;
+
       @include media(992) {
         gap: 30px;
+
         & svg {
           width: 15px;
           height: 15px;
@@ -145,6 +156,7 @@
         display: flex;
         align-items: center;
         gap: 30px;
+
         @include media(992) {
           gap: 15px;
         }
@@ -174,14 +186,17 @@
     flex-direction: column;
     gap: 50px;
     margin-bottom: 250px;
+
     @include media(992) {
       margin-bottom: 100px;
     }
+
     &-title {
       color: #343434;
       font-size: clamp(1.5rem, 1.125rem + 1.88vw, 3.375rem);
       font-weight: 600;
       line-height: 125%;
+
       & span {
         color: #08a1c1;
       }
@@ -196,9 +211,11 @@
       flex-wrap: wrap;
       gap: 15px;
       justify-content: center;
+
       @include media(690) {
         display: grid;
       }
+
       &-item {
         display: flex;
         align-items: center;
@@ -216,6 +233,7 @@
           max-width: 100%;
           min-width: 100%;
           border-radius: 16px;
+
           &:nth-child(1) {
             grid-column: span 2;
           }
@@ -223,12 +241,15 @@
 
         @include media(480) {
           padding: 20px;
+
           &:nth-child(1) {
             padding: 25px;
           }
         }
+
         @include media(400) {
           padding: 5px 15px;
+
           &:nth-child(1) {
             padding: 10px;
           }
@@ -244,4 +265,45 @@
       }
     }
   }
+
+  &__company {
+    padding: 30px 0 70px;
+
+    &-title {
+      color: #343434;
+      font-size: clamp(1.5rem, 1.125rem + 1.88vw, 3.375rem);
+      font-weight: 600;
+      line-height: 125%;
+      margin-bottom: 30px;
+      text-align: center;
+      margin-top: 30px;
+
+      &-span {
+        color: #08a1c1;
+        font-weight: 600;
+      }
+    }
+    &-title2{
+      font-size: clamp(1.125rem, 0.883rem + 1.21vw, 1.875rem);
+      font-weight: 600;
+      line-height: 125%;
+      text-align: center;
+      margin-top: 30px;
+     
+    }
+
+    &-text-desc {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+    }
+
+    &-desc {
+      color: #343434;
+      font-size: clamp(0.75rem, 0.65rem + 0.5vw, 1.25rem);
+      font-weight: 400;
+      line-height: 130%;
+    }
+  }
+
 }
