--- a/src/assets/scss/UI/OrderModal.scss
+++ b/src/assets/scss/UI/OrderModal.scss
@@ -1,6 +1,6 @@
 .order__modal {
   position: fixed;
-  background: #00141880;
+  background: rgba(0, 20, 24, 0.5);
   left: 0;
   top: 0;
   right: 0;
@@ -27,7 +27,6 @@
 
     @include media(480) {
       padding: 16px;
-
     }
 
     &-btns {
@@ -44,14 +43,12 @@
       @include media(380) {
         flex-direction: column;
       }
-
     }
 
     &-btn {
       max-width: 302px;
       width: 100%;
     }
-
 
     &-top {
       display: flex;
@@ -61,7 +58,7 @@
       &-title {
         font-size: clamp(1.563rem, 0.903rem + 3.3vw, 3.375rem);
         font-weight: 600;
-        color: #08A1C1;
+        color: #08a1c1;
       }
 
       &-close {
@@ -77,7 +74,6 @@
           width: 24px;
           height: 24px;
         }
-
       }
     }
   }
@@ -101,7 +97,6 @@
         grid-column: auto;
       }
 
-
       &:nth-child(5) {
         grid-column: 2 span;
 
@@ -109,11 +104,7 @@
           grid-column: auto;
         }
       }
-
-
     }
-
-
 
     &_label {
       font-size: 14px;
@@ -125,10 +116,10 @@
 
     &_input {
       width: 100%;
-      border: 1px solid #08A1C1;
+      border: 1px solid #08a1c1;
       padding: 4px 16px;
       border-radius: 4px;
-      background: #F1F1F1;
+      background: #f1f1f1;
 
       &::placeholder {
         color: #343434;
@@ -137,11 +128,11 @@
 
     &-select {
       width: 100%;
-      border: 1px solid #08A1C1;
+      border: 1px solid #08a1c1;
       border-radius: 4px;
       padding: 4px 16px;
       appearance: none;
-      background: #F1F1F1;
+      background: #f1f1f1;
       background-image: url(@assets/images/icons/selectArrow.svg);
       background-repeat: no-repeat;
       background-position-x: 98%;
@@ -151,8 +142,7 @@
         font-size: 18px;
         padding: 10px !important;
         border-radius: none;
-        background: #F1F1F1;
-
+        background: #f1f1f1;
       }
     }
 
@@ -161,10 +151,9 @@
       width: 100%;
       min-height: 141px;
       padding: 16px;
-      border: 1px solid #08A1C1;
-      background: #F1F1F1;
+      border: 1px solid #08a1c1;
+      background: #f1f1f1;
       border-radius: 4px;
     }
   }
-
 }
