--- a/src/components/Apartament/Apartament.scss
+++ b/src/components/Apartament/Apartament.scss
@@ -229,6 +229,10 @@
             font-weight: 500;
             line-height: 120%;
             letter-spacing: 0.36px;
+
+            @include media(992) {
+              font-size: 20px;
+            }
           }
         }
 
@@ -253,6 +257,10 @@
             border-radius: 8px;
             border: 1px solid #08a1c1;
             width: 100%;
+
+            @include media(992) {
+              font-size: 20px;
+            }
           }
 
           &-call {
@@ -264,6 +272,10 @@
             padding: 8px 16px;
             border-radius: 8px;
             background: #08a1c1;
+
+            @include media(992) {
+              font-size: 20px;
+            }
           }
         }
       }
@@ -279,7 +291,7 @@
 
         &-block {
           display: flex;
-          align-items: center;
+          align-items: flex-start;
           gap: 5px;
 
           &-title {
@@ -288,6 +300,10 @@
             font-weight: 700;
             line-height: 120%;
             letter-spacing: 0.28px;
+
+            @include media(992) {
+              font-size: 20px;
+            }
           }
 
           &-descr {
@@ -296,6 +312,10 @@
             font-weight: 400;
             line-height: 120%;
             letter-spacing: 0.28px;
+
+            @include media(992) {
+              font-size: 18px;
+            }
           }
         }
       }
