--- a/src/components/Apartament/Apartament.scss
+++ b/src/components/Apartament/Apartament.scss
@@ -554,6 +554,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
     @include media(992) {
       padding: 0;
     }
@@ -566,47 +567,56 @@
       display: flex;
       align-items: center;
       gap: 50px;
+
       // background: red;
       @include media(880) {
         max-width: 100%;
         width: 100%;
         gap: 10px;
       }
-      @include media (600) {
-        height: 30%;
-      }
+
+      // @include media (600) {
+      //   height: 30%;
+      // }
     }
 
     &-slider {
       width: 100%;
       height: 100%;
       border-radius: 10px;
+
       &-slide {
         width: 100%;
         height: 100%;
         border-radius: 10px;
         overflow: hidden;
+
         & img {
           width: 100%;
           height: 100%;
-          object-fit: cover;
           display: block;
+          object-fit: contain;
+
         }
       }
     }
+
     &-btn {
+
       &-prev,
       &-next {
         & svg {
           width: 50px;
           height: 50px;
           fill: #ffff;
+
           @include media(880) {
             display: none;
           }
         }
       }
     }
+
     &-close {
       position: absolute;
       top: 50px;
@@ -614,6 +624,7 @@
       width: 30px;
       height: 30px;
       z-index: 10000;
+
       & svg {
         width: 100%;
         height: 100%;
