--- a/src/components/Apartament/Apartament.scss
+++ b/src/components/Apartament/Apartament.scss
@@ -214,7 +214,6 @@
             height: 70px;
             border-radius: 50%;
             overflow: hidden;
-
             & img {
               width: 100%;
               height: 100%;
@@ -229,9 +228,13 @@
             font-weight: 500;
             line-height: 120%;
             letter-spacing: 0.36px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
 
             @include media(992) {
-              font-size: 20px;
+              font-size: 16px;
             }
           }
         }
